--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
     <link href="https://fonts.googleapis.com/css?family=Material+Icons|Material+Icons+Outlined|Material+Icons+Two+Tone|Material+Icons+Round|Material+Icons+Sharp" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@5.15.3/css/fontawesome.min.css" integrity="sha384-wESLQ85D6gbsF459vf1CiZ2+rr+CsxRY0RpiF1tLlQpDnAgg6rwdsUF1+Ics2bni" crossorigin="anonymous">
 
-    <link rel="stylesheet" href="styles/reset.scss">
-    <link rel="stylesheet" href="styles/classes.scss">
-    <link rel="stylesheet" href="styles/global.scss">
-    <link rel="stylesheet" href="styles/home.scss">
+    <link rel="stylesheet" href="/styles/reset.scss">
+    <link rel="stylesheet" href="/styles/classes.scss">
+    <link rel="stylesheet" href="/styles/global.scss">
+    <link rel="stylesheet" href="/styles/home.scss">
 
     <title>Document</title>
 </head>
