--- a/index.html
+++ b/index.html
@@ -68,8 +68,8 @@
                         </span>
                     </div>
                 </div>
-                <div id="city">
-                    <span>Paris</span>
+                <div id="author">
+                    <span>BY <span class="crimson-fg">&bull;</span> <a id="visit" href="https://github.com/volperoid">Volperoid</a></span>
                 </div>
             </div>
         </div>
