added accordion gallery to webpage

--- a/index.html
+++ b/index.html
@@ -74,5 +74,24 @@
             </div>
         </div>
     </header>
+    <main>
+        <div class="accordion">
+            <div id="photo-a" class="illustration">
+
+            </div>
+            <div id="photo-b" class="illustration">
+
+            </div>
+            <div id="photo-c" class="illustration">
+
+            </div>
+            <div id="photo-d" class="illustration">
+
+            </div>
+            <div id="photo-e" class="illustration">
+
+            </div>
+        </div>
+    </main>
 </body>
 </html>
