--- a/index.html
+++ b/index.html
@@ -77,7 +77,15 @@
     <main>
         <div class="accordion">
             <div id="photo-a" class="illustration">
-
+                <div class="wrapper">
+                    <div class="info">
+                        <h1>Urban</h1>
+                        <p>The perfect ballance between performance, comfort, and convenience. These machines have been designed to help you traverse the concrete jungle like never before.</p>
+                    </div>
+                    <div class="explore">
+                        <a id="link-btn" href="">Explore</a>
+                    </div>
+                </div>
             </div>
             <div id="photo-b" class="illustration">
 
