--- a/index.html
+++ b/index.html
@@ -88,16 +88,48 @@
                 </div>
             </div>
             <div id="photo-b" class="illustration">
-
+                <div class="wrapper">
+                    <div class="info">
+                        <h1>Adventure</h1>
+                        <p>The perfect ballance between performance, comfort, and convenience. These machines have been designed to help you traverse the concrete jungle like never before.</p>
+                    </div>
+                    <div class="explore">
+                        <a id="link-btn" href="">Explore</a>
+                    </div>
+                </div>
             </div>
             <div id="photo-c" class="illustration">
-
+                <div class="wrapper">
+                    <div class="info">
+                        <h1>Competitive</h1>
+                        <p>The perfect ballance between performance, comfort, and convenience. These machines have been designed to help you traverse the concrete jungle like never before.</p>
+                    </div>
+                    <div class="explore">
+                        <a id="link-btn" href="">Explore</a>
+                    </div>
+                </div>
             </div>
             <div id="photo-d" class="illustration">
-
+                <div class="wrapper">
+                    <div class="info">
+                        <h1>Luxury</h1>
+                        <p>The perfect ballance between performance, comfort, and convenience. These machines have been designed to help you traverse the concrete jungle like never before.</p>
+                    </div>
+                    <div class="explore">
+                        <a id="link-btn" href="">Explore</a>
+                    </div>
+                </div>
             </div>
             <div id="photo-e" class="illustration">
-
+                <div class="wrapper">
+                    <div class="info">
+                        <h1>Experimental</h1>
+                        <p>The perfect ballance between performance, comfort, and convenience. These machines have been designed to help you traverse the concrete jungle like never before.</p>
+                    </div>
+                    <div class="explore">
+                        <a id="link-btn" href="">Explore</a>
+                    </div>
+                </div>
             </div>
         </div>
     </main>
