--- a/index.html
+++ b/index.html
@@ -100,8 +100,10 @@
             </div>
             <div id="photo-c" class="illustration">
                 <div class="wrapper">
-                    <div class="info">
+                    <div class="category">
                         <h1>Competitive</h1>
+                    </div>
+                    <div class="info">
                         <p>The perfect ballance between performance, comfort, and convenience. These machines have been designed to help you traverse the concrete jungle like never before.</p>
                     </div>
                     <div class="explore">
