--- a/index.html
+++ b/index.html
@@ -78,8 +78,10 @@
         <div class="accordion">
             <div id="photo-a" class="illustration">
                 <div class="wrapper">
+                    <div class="category">
+                        <h1>Competitive</h1>
+                    </div>
                     <div class="info">
-                        <h1>Urban</h1>
                         <p>The perfect ballance between performance, comfort, and convenience. These machines have been designed to help you traverse the concrete jungle like never before.</p>
                     </div>
                     <div class="explore">
@@ -89,8 +91,10 @@
             </div>
             <div id="photo-b" class="illustration">
                 <div class="wrapper">
+                    <div class="category">
+                        <h1>Competitive</h1>
+                    </div>
                     <div class="info">
-                        <h1>Adventure</h1>
                         <p>The perfect ballance between performance, comfort, and convenience. These machines have been designed to help you traverse the concrete jungle like never before.</p>
                     </div>
                     <div class="explore">
@@ -113,8 +117,10 @@
             </div>
             <div id="photo-d" class="illustration">
                 <div class="wrapper">
+                    <div class="category">
+                        <h1>Competitive</h1>
+                    </div>
                     <div class="info">
-                        <h1>Luxury</h1>
                         <p>The perfect ballance between performance, comfort, and convenience. These machines have been designed to help you traverse the concrete jungle like never before.</p>
                     </div>
                     <div class="explore">
@@ -124,8 +130,10 @@
             </div>
             <div id="photo-e" class="illustration">
                 <div class="wrapper">
+                    <div class="category">
+                        <h1>Competitive</h1>
+                    </div>
                     <div class="info">
-                        <h1>Experimental</h1>
                         <p>The perfect ballance between performance, comfort, and convenience. These machines have been designed to help you traverse the concrete jungle like never before.</p>
                     </div>
                     <div class="explore">
